--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~12.1.0-",
     "@angular/router": "~12.1.0-",
     "express": "^4.17.1",
+    "ngx-pagination": "^5.1.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
@@ -40,6 +41,6 @@
   },
   "engines": {
     "node": "14.15.4",
-    "npm":"6.14.10"
+    "npm": "6.14.10"
   }
 }
